TPBE-4767-search-position-pwa-visible-fix

--- a/assets/styles/components/layout/header.scss
+++ b/assets/styles/components/layout/header.scss
@@ -19,7 +19,6 @@
   }
 
   &:has(.pwa) {
-    background: red;
     @media (max-width: 1281px) {
       .search {
         transform: translateY(64px);
